--- a/01_topic-modeling_dataset-reorganize.ipynb
+++ b/01_topic-modeling_dataset-reorganize.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(10,7), dpi=360) # \n",
+    "plt.figure(figsize=(10,7), dpi=360) # create new figure with dimensions=figsize and specific resolution\n",
     "\n",
     "speeches_per_year.size().plot.bar()\n",
     "\n",
@@ -144,9 +144,9 @@
     "plt.ylabel(\"Anzahl\", fontsize=20)\n",
     "plt.xticks(fontsize=15, rotation=60)\n",
     "plt.yticks(fontsize=15)\n",
-    "#plt.grid(True) #\n",
-    "plt.tight_layout() #\n",
-    "#plt.savefig(\"PATH\") \n",
+    "#plt.grid(True) # show grid\n",
+    "plt.tight_layout() # for optimal fit\n",
+    "#plt.savefig(\"PATH\") # save figure to disk\n",
     "plt.show()"
    ]
   },
@@ -164,36 +164,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# solution\n",
-    "speeches_per_person = corpus.groupby(\"person\")\n",
-    "speeches_per_person.size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot speeches per person\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(10,7), dpi=360) # \n",
-    "\n",
-    "speeches_per_person.size().sort_values(ascending=False)[:10].plot.bar()\n",
-    "\n",
-    "plt.title(\"Anzahl der Reden pro Person\", fontsize=22, fontstyle=\"oblique\")\n",
-    "plt.xlabel(\"Redner:in\", fontsize=20)\n",
-    "plt.ylabel(\"Anzahl\", fontsize=20)\n",
-    "plt.xticks(fontsize=15, rotation=60)\n",
-    "plt.yticks(fontsize=15)\n",
-    "#plt.grid(True) #\n",
-    "plt.tight_layout() #\n",
-    "#plt.savefig(\"PATH\") \n",
-    "plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
