--- a/data/01_loesung.ipynb
+++ b/data/01_loesung.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "plt.figure(figsize=(10,7), dpi=360)  \n",
     "\n",
-    "speeches_per_person.size().sort_values(ascending=False)[:10].plot.bar()\n",
+    "speeches_per_person.size().sort_values(ascending=False)[:10].plot.bar() # new function .sort_values()\n",
     "\n",
     "plt.title(\"Anzahl der Reden pro Person\", fontsize=22, fontstyle=\"oblique\")\n",
     "plt.xlabel(\"Redner:in\", fontsize=20)\n",
