--- a/02_topic-modeling_textdata-preprocessing.ipynb
+++ b/02_topic-modeling_textdata-preprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Einführung in Topic Modeling mit Python - Step 1: Datensatz organisieren\n",
     "\n",
-    "## 1. Sortierts Datenkorpus laden"
+    "## 1. Sortiertes Datenkorpus laden"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "\n",
     "    return tokenized\n",
     "\n",
-    "speeches_tokenized = sent_to_words(list_of_speeches) # list(sent_to_words(list_of_speeches))\n",
+    "speeches_tokenized = sent_to_words(list_of_speeches) \n",
     "\n",
     "print(speeches_tokenized[-3])"
    ]
@@ -221,6 +221,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Übung 2: \n",
+    "Zählen Sie in Anlehnung an den obigen Codeblock die Anzahl der Token nach dem Preprocessing. Wie hat sich die Datengrundlage verändert?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vorverarbeitete Textdaten in den Dataframe speichern"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -249,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +291,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c34e5b473f37e48abf21cbb9479ed39ebe54eb38842fb248096a64e4d7f58211"
+    "hash": "ab2bc7d93ca595a8547f73d141c9dac102da280dfea0255e9d7a3267ba9f4e63"
    }
   }
  },
