--- a/03_topic-modeling_train-topic-model.ipynb
+++ b/03_topic-modeling_train-topic-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,12 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compute coherence score\n",
     "# computation takes some time (especially in Binder)\n",
     "\n",
-    "# compute perplexity\n",
-    "print(f\"Perplexity: {ldamodel.log_perplexity(corpus)}\")  # a measure of how good the model is. The lower the better.\n",
-    "\n",
-    "# compute coherence score\n",
     "coherence_model_lda = CoherenceModel(model=ldamodel, texts=text_corpus, dictionary=id2word, coherence='c_v')\n",
     "coherence_lda = coherence_model_lda.get_coherence()\n",
     "print(f\"Coherence Score: {coherence_lda}\")"
@@ -401,9 +398,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mininghistoriansweb",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
-   "name": "mininghistoriansweb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -419,7 +416,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c34e5b473f37e48abf21cbb9479ed39ebe54eb38842fb248096a64e4d7f58211"
+    "hash": "ab2bc7d93ca595a8547f73d141c9dac102da280dfea0255e9d7a3267ba9f4e63"
    }
   }
  },
